Creacion de Component con cli angular
se utiliza el cmd, se revisa docu, y se usa un comp dentro de otro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,6 +353,9 @@
 
   <!--Pruebas con componentes nuevos -->
   <mi-componente> </mi-componente>
+  <peliculas></peliculas>
+  <app-pruebas></app-pruebas>
+
 
   <!-- Resources -->
   <h2>Resources</h2>
